# quantum-room-temperature-super-conductor-protocol

./: CITATION.cff  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt  supercon_analysis.py  test_calculations.py
.git_disabled/: .MERGE_MSG.swp
.github/workflows/: ci.yml  linkcheck.yml  python-tests.yml  tex.yml
analysis/: supercon_analysis.py
docs/: Fabrication_SOP.md  rtsc_results.schema.json
examples/demo_run/: rtsc_results.sample.json
examples/sample_data/: ac_susceptibility.csv  alpha2F_demo.csv  iv_4probe.csv  raman.csv
examples/validation_runs/: tc_demo.json
examples/validation_runs/synthetic_run/: result.json
masks/: mask_generator.py
quantum_rtsc_protocol/: cli.py
quantum_rtsc_protocol/tools/: eliashberg_runner.py  rtsc_calculator.py  rtsc_pipeline.py
tests/: test_calculations.py  test_calculator.py  test_cli.py  test_cli_calc.py  test_eliashberg_runner.py  test_enhanced_calculator.py  test_physics_validation.py  test_regression.py  test_results_schema.py  test_schema_validation.py  test_validators.py
tools/: __init__.py  rtsc_calculator.py  rtsc_pipeline.py
