[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-rtsc-protocol"
version = "0.1.0"
description = "End-to-end demo pipeline for RTSC protocol (calc + analysis + mask + validators)"
authors = [{ name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "gdspy>=1.6",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
rtsc-calc = "tools.rtsc_calculator:app"
rtsc-demo = "tools.quickstart:app"
