[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_rtsc_protocol"
version = "0.1.0"
description = "Open-source protocol for room-temperature superconductivity in hydrogen-intercalated graphene/h-BN heterostructures"
authors = [
    { name = "RTSC Protocol Team" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jsonschema>=4.18",
    "gdspy>=1.6",
    "typer>=0.9",
    "rich>=13.0",
    "pytest>=7.0"
]

[project.scripts]
rtsc = "quantum_rtsc_protocol.cli:main"
rtsc-eliashberg = "quantum_rtsc_protocol.tools.eliashberg_runner:main"
rtsc-calc = "tools.rtsc_calculator:main"
eliashberg-runner = "tools.eliashberg_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_rtsc_protocol*"]
